--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="interval.com.intervalapp.MainActivity">
-<interval.com.intervalapp.Chronometer
+<interval.com.intervalapp.chronometer.Chronometer
     android:id="@+id/chronometer"
-    android:layout_width="fill_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:textSize="96sp"
     android:text="Chronometer"
-    android:gravity="center"/>
+    android:gravity="center"
+    tools:layout_editor_absoluteY="39dp"
+    tools:layout_editor_absoluteX="34dp" />
+    <Button
+        android:layout_width="88dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="182dp"
+        tools:layout_editor_absoluteX="148dp"
+        android:id="@+id/start"
+        android:text="START"/>
 
 
 </android.support.constraint.ConstraintLayout>
