Added chronometer and lineralProgressButton in ModeActivity

--- a/app/src/main/res/layout/runtime_layout.xml
+++ b/app/src/main/res/layout/runtime_layout.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <com.dd.morphingbutton.MorphingButton
-        android:id="@+id/btnMorph1"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/background"/>
