--- a/app/src/main/res/layout/ac_sample_morph.xml
+++ b/app/src/main/res/layout/ac_sample_morph.xml
@@ -7,7 +7,7 @@
     tools:context="${relativePackage}.${activityClass}">
 
     <com.dd.morphingbutton.MorphingButton
-        android:id="@+id/btnMorph1"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/background"/>
@@ -18,5 +18,11 @@
         android:layout_height="wrap_content"
         android:textColor="@color/background"
         android:layout_marginTop="16dp"/>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="150dp">
+
+
+</LinearLayout>
 
 </LinearLayout>
