--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,15 @@
     <color name="primary">#E43F3F</color>
     <color name="primary_dark">#E12929</color>
     <color name="primary_darker">#CC1D1D</color>
-    <color name="colorPrimaryDark">#CC1D1D</color>
+    <color name="colorPrimary">#BDBDBD</color>
+    <color name="colorPrimaryDark">#616161</color>
+    <color name="colorAccent">#82b1ff</color>
     <color name="accent">#ffffff</color>
     <color name="background">#616161</color>
     <color name="primary_background">#BDBDBD</color>
-    <color name="colorAccent">#82b1ff</color>
-    <color name="colorPrimary">#82b1ff</color>
-    <color name="accent2">#82b1ff</color>
+    <color name="plainMode">#82b1ff</color>
+    <color name="easyMode">#AED581</color>
+    <color name="notSoEasyMode">#FF8A65</color>
 
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
