--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -2,6 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/backgirl"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -19,7 +21,8 @@
             android:layout_marginBottom="10dp"
             android:text="IntervalApp"
             android:textAlignment="center"
-            android:textColor="@color/colorAccent"
+
+            android:textColor="@color/accent"
             android:textSize="36sp" />
 
         <ImageView
@@ -28,36 +31,42 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
             android:src="@drawable/run"
-            android:tint="@color/background" />
+            android:tint="@color/accent" />
 
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:theme="@style/LoginTheme">
 
             <EditText
                 android:id="@+id/loginEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:lineSpacingExtra="8sp"
+                android:textColor="@color/accent" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
         <android.support.design.widget.TextInputLayout
+            app:passwordToggleEnabled="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:theme="@style/LoginTheme">
 
             <EditText
                 android:id="@+id/loginPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/accent" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
@@ -66,8 +75,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
+            android:background="@color/colorPrimary"
             android:padding="12dp"
-            android:text="Login" />
+            android:text="Login"
+            android:textColor="@color/accent" />
 
         <TextView
             android:id="@+id/newAccount"
@@ -76,6 +87,7 @@
             android:layout_marginBottom="24dp"
             android:gravity="center"
             android:text="No account yet? Create one"
+            android:textColor="@color/accent"
             android:textSize="16dip" />
 
     </LinearLayout>
