--- a/app/src/main/res/layout/new_account_layout.xml
+++ b/app/src/main/res/layout/new_account_layout.xml
@@ -56,21 +56,6 @@
                 android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
-        <!--  Nick Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/accountNick"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Nick"
-                android:inputType="textEmailAddress" />
-        </android.support.design.widget.TextInputLayout>
-
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -112,6 +97,16 @@
             android:layout_marginTop="24dp"
             android:padding="12dp"
             android:text="Create Account" />
+
+        <TextView
+            android:id="@+id/newAccount"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:gravity="center"
+            android:text="Forget password?"
+            android:textColor="@color/colorAccent"
+            android:textSize="16dip" />
 
     </LinearLayout>
 
