--- a/app/src/main/res/layout/mode_layout.xml
+++ b/app/src/main/res/layout/mode_layout.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="interval.com.intervalapp.activity.ModeActivity">
 
     <Button
-        android:id="@+id/firstMode"
+        android:id="@+id/first_mode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="FAT BURNING" />
 
     <Button
-        android:id="@+id/secondMode"
+        android:id="@+id/second_mode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="CARDIO" />
 
     <Button
-        android:id="@+id/thirdMode"
+        android:id="@+id/third_mode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button" />
