working with realmdatabase

--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -18,10 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10px"
         android:text="Button" />
-    <interval.com.intervalapp.chronometer.Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
     <Chronometer
+        android:id="@+id/main_chronometer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
