--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="interval.com.intervalapp.activity.RunActivity">
+    tools:context="interval.com.intervalapp.activity.RunActivity"
+    android:weightSum="1">
 
     <ToggleButton
         android:id="@+id/run_button"
@@ -21,7 +22,8 @@
 
     <Chronometer
         android:id="@+id/main_chronometer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
