added countdown timer

--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -19,9 +19,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10px"
         android:text="Button" />
-
+    <TextView
+        android:id="@+id/countdown_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
     <Chronometer
-        android:id="@+id/main_chronometer"
+        android:id="@+id/android_chronometer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+    <interval.com.intervalapp.chronometer.Chronometer
+        android:id="@+id/class_chronometer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
