--- a/app/src/main/res/layout/new_account_activity.xml
+++ b/app/src/main/res/layout/new_account_activity.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:theme="@style/LoginTheme">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/backlegs"
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
         android:paddingTop="24dp">
-
 
         <TextView
             android:id="@+id/textView2"
@@ -22,7 +24,7 @@
             android:layout_marginBottom="24dp"
             android:text="Create new account"
             android:textAlignment="center"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textSize="30sp" />
 
 
@@ -31,14 +33,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:theme="@style/FilterInputLayout">
 
             <EditText
                 android:id="@+id/accountName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Surname Label -->
@@ -46,14 +50,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:theme="@style/FilterInputLayout">
 
             <EditText
                 android:id="@+id/accountSurname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Surname"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Email Label -->
@@ -61,14 +67,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:theme="@style/FilterInputLayout">
 
             <EditText
                 android:id="@+id/accountEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
@@ -77,7 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            app:passwordToggleEnabled="true">
+            android:theme="@style/FilterInputLayout"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/white">
 
             <EditText
                 android:id="@+id/accountPassword"
@@ -85,9 +95,9 @@
                 android:layout_height="wrap_content"
                 android:hint="Password"
                 android:inputType="textPassword"
+                android:textColor="@color/white"
                 android:visibility="visible" />
         </android.support.design.widget.TextInputLayout>
-
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/createAccountButton"
@@ -95,19 +105,21 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:padding="12dp"
-            android:text="Create Account" />
+            android:background="@drawable/mybutton"
+            android:padding="5dp"
+            android:text="Create Account"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/new_account"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="Forget password?"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textSize="16dip" />
 
     </LinearLayout>
 
-</ScrollView>
+</RelativeLayout>
