--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -17,12 +17,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="0dp"
         android:orientation="vertical"
         android:paddingBottom="0dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
 
         <LinearLayout
@@ -40,8 +41,7 @@
                 android:layout_marginBottom="10dp"
                 android:text="IntervalApp"
                 android:textAlignment="center"
-
-                android:textColor="@color/accent"
+                android:textColor="@color/white"
                 android:textSize="36sp" />
 
             <ImageView
@@ -50,7 +50,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp"
                 android:src="@drawable/run"
-                android:tint="@color/accent" />
+                android:tint="@color/white" />
 
             <!--  Email Label -->
             <android.support.design.widget.TextInputLayout
@@ -67,7 +67,7 @@
                     android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:lineSpacingExtra="8sp"
-                    android:textColor="@color/accent" />
+                    android:textColor="@color/white" />
             </android.support.design.widget.TextInputLayout>
 
             <!--  Password Label -->
@@ -78,7 +78,7 @@
                 android:layout_marginTop="8dp"
                 android:theme="@style/FilterInputLayout"
                 app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/accent">
+                app:passwordToggleTint="@color/white">
 
                 <EditText
                     android:id="@+id/loginPassword"
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Password"
                     android:inputType="textPassword"
-                    android:textColor="@color/accent" />
+                    android:textColor="@color/white" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.AppCompatButton
@@ -96,9 +96,8 @@
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/mybutton"
-                android:padding="12dp"
                 android:text="Login"
-                android:textColor="@color/accent" />
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/new_account"
@@ -109,7 +108,7 @@
                 android:gravity="center"
                 android:onClick="onClick"
                 android:text="No account yet? Create one"
-                android:textColor="@color/accent"
+                android:textColor="@color/white"
                 android:textSize="16dip" />
 
         </LinearLayout>
