--- a/app/src/main/res/layout/new_account_activity.xml
+++ b/app/src/main/res/layout/new_account_activity.xml
@@ -23,6 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:text="Create new account"
+            android:elevation="20dp"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30sp" />
