--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="background">#616161</color>
     <color name="primary_background">#BDBDBD</color>
     <color name="easyMode">#AED581</color>
-    <color name="notSoEasyMode">#FF8A65</color>
+    <color name="notSoEasyMode">#A5868B</color>
 
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
