--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -7,18 +7,24 @@
     tools:context="interval.com.intervalapp.activity.RunActivity"
     android:weightSum="1">
 
-    <ToggleButton
-        android:id="@+id/run_button"
+    <Button
+        android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ToggleButton" />
+        android:text="Start" />
 
+    <Button
+        android:id="@+id/pause_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10px"
+        android:text="Pause" />
     <Button
         android:id="@+id/stop_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10px"
-        android:text="Button" />
+        android:text="Stop" />
     <TextView
         android:id="@+id/countdown_textView"
         android:layout_width="wrap_content"
