--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -2,7 +2,6 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fb="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,18 +11,18 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/backlegs2" />
+        android:src="@drawable/back_legs2" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:paddingBottom="0dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:paddingTop="@dimen/activity_vertical_margin">
 
 
         <LinearLayout
@@ -35,11 +34,11 @@
             android:paddingTop="56dp">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/appName_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="IntervalApp"
+                android:text="@string/app_name_no_space"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="36sp" />
@@ -64,7 +63,7 @@
                     android:id="@+id/loginEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:lineSpacingExtra="8sp"
                     android:textColor="@color/white" />
@@ -84,19 +83,19 @@
                     android:id="@+id/loginPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="@string/password"
                     android:inputType="textPassword"
                     android:textColor="@color/white" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/loginButton"
+                android:id="@+id/login_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/mybutton"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/white" />
 
             <TextView
@@ -106,10 +105,9 @@
                 android:layout_marginBottom="24dp"
                 android:clickable="true"
                 android:gravity="center"
-                android:onClick="onClick"
-                android:text="No account yet? Create one"
+                android:text="@string/create_new_account"
                 android:textColor="@color/white"
-                android:textSize="16dip" />
+                android:textSize="16sp" />
 
         </LinearLayout>
     </LinearLayout>
