--- a/app/src/main/res/layout/new_account_activity.xml
+++ b/app/src/main/res/layout/new_account_activity.xml
@@ -18,7 +18,7 @@
         android:paddingTop="24dp">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/appName_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
