--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
-                android:background="@drawable/mybutton"
+                android:background="@drawable/my_button"
                 android:text="@string/login"
                 android:textColor="@color/white" />
 
