--- a/app/src/main/res/layout/new_account_activity.xml
+++ b/app/src/main/res/layout/new_account_activity.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backlegs"
+        android:background="@drawable/back_legs"
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:background="@drawable/mybutton"
+            android:background="@drawable/my_button"
             android:padding="5dp"
             android:text="@string/create_account"
             android:textColor="@color/white" />
