butterknife binding in Selected mode. refactor selected (select2activity) modes

--- a/app/src/main/res/layout/ac_sample_lineral.xml
+++ b/app/src/main/res/layout/ac_sample_lineral.xml
@@ -20,7 +20,7 @@
             android:layout_height="@dimen/mb_height_56">
 
             <com.dd.morphingbutton.impl.LinearProgressButton
-                android:id="@+id/startButton"
+                android:id="@+id/start_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -34,7 +34,7 @@
             android:orientation="horizontal">
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/floatingActionButton2"
+                android:id="@+id/pause_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -44,7 +44,7 @@
                 app:srcCompat="@drawable/pause" />
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/floatingActionButton"
+                android:id="@+id/stop_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,7 +55,7 @@
 
         </LinearLayout>
 
-        <interval.com.intervalapp.chronometer.Chronometer
+        <Chronometer
             android:id="@+id/chronometer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
