--- a/app/src/main/res/layout/selected_mode_activity.xml
+++ b/app/src/main/res/layout/selected_mode_activity.xml
@@ -44,7 +44,7 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/ac_sample_lineral" />
+    <include layout="@layout/ac_sample_linear" />
 
 
 </android.support.design.widget.CoordinatorLayout>
