--- a/app/src/main/res/layout/ac_sample_linear.xml
+++ b/app/src/main/res/layout/ac_sample_linear.xml
@@ -10,10 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="center"
-        android:weightSum="1"
-        android:paddingTop="40dp">
+        android:orientation="vertical"
+        android:paddingTop="40dp"
+        android:weightSum="1">
 
         <FrameLayout
             android:layout_width="match_parent"
