--- a/app/src/main/res/layout/ac_sample_linear.xml
+++ b/app/src/main/res/layout/ac_sample_linear.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/notSoEasyMode"
+    android:background="@color/colorPrimaryDark"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/selected_mode_activity">
 
@@ -15,58 +15,109 @@
         android:paddingTop="40dp"
         android:weightSum="1">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/mb_height_56">
-
-            <com.dd.morphingbutton.impl.LinearProgressButton
-                android:id="@+id/start_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/mb_white" />
-
-        </FrameLayout>
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
             android:orientation="horizontal">
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/pause_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="true"
-                app:backgroundTint="@color/colorAccent"
-                app:fabSize="mini"
-                app:srcCompat="@drawable/pause" />
+            <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                android:id="@+id/circuralProgress"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                app:cpb_background_progressbar_color="@color/colorPrimary"
+                app:cpb_background_progressbar_width="5dp"
+                app:cpb_progressbar_color="@color/start"
+                app:cpb_progressbar_width="10dp" />
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/stop_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="true"
-                app:backgroundTint="@color/holo_red_light"
-                app:fabSize="mini"
-                app:srcCompat="@drawable/stop" />
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/start_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:src="@drawable/play"
+                    app:backgroundTint="@color/start"
+                    app:fabSize="normal" />
 
-        <Chronometer
-            android:id="@+id/chronometer"
-            android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/pause_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:src="@drawable/pause"
+                        app:backgroundTint="@color/white"
+                        app:fabSize="mini" />
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/stop_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:src="@drawable/stop"
+                        app:backgroundTint="@color/white"
+                        app:fabSize="mini" />
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <GridLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.28"
-            android:gravity="center"
-            android:text="Chronometer"
-            android:textColor="@color/background"
-            android:textSize="40sp" />
+            android:columnCount="2">
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.28"
+                android:text="Timer"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.28"
+                android:text="Next interval in:"
+                android:textColor="@color/white" />
+
+            <Chronometer
+                android:id="@+id/chronometer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_weight="0.28"
+                android:text="Chronometer"
+                android:textColor="@color/white"
+                android:textSize="40sp" />
+
+            <TextView
+                android:id="@+id/countdown_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.28"
+                android:text="WSTAW TIMER"
+                android:textColor="@color/white" />
+
+        </GridLayout>
     </LinearLayout>
-
 </android.support.v4.widget.NestedScrollView>
-
-
